2011-08-06  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add ReliaFree

2011-08-05  Dieter Verfaillie  <dieterv@optionexplicit.be>

	* articles/pygtk-glade-gui: Update documentation links
	and add missing images
	* articles/application-pygtk-glade: Add link to part one
	* articles/custom-widgets-glade: Update documentation links
	* articles/application-pygtk-glade: Update documentation links
	and add missing images
	* articles/applets_arturogf: Update documentation links
	* about.src applications.src developer.src downloads.src
	feedback.src index.src: Fix typos

2011-07-21  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Naufrago! feed reader

2011-06-21  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Darning and gwsmhg by Peter Williams

2011-06-11  Rafael Villar Burke  <pachi@rvburke.com>

	* articles.src: Add PyGTK Book document by Peter Gill
	* articles.src: Fix typo
	* applications.src: Add DeVeDe by rastersoft

2011-05-10  Rafael Villar Burke  <pachi@rvburke.com>

	* downloads.src: Update links to 2.24 (AIO and stable series)
	* pygtk-web.doap: Add proyect Metadata file

2011-04-02  Rafael Villar Burke  <pachi@rvburke.com>

	* newsitems.py downloads.src: Announce the PyGTK 2.24 release

2011-03-13  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Sunflower-fm

2011-02-22  Rafael Villar Burke  <pachi@rvburke.com>

	* downloads: fix typo

2011-02-07  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add Creepy and Geany

2011-01-30  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Change gslimp3 url

2011-01-12  Rafael Villar Burke  <pachi@rvburke.com>

	* applications.src: Add cherrytree

2010-12-25  Rafael Villar Burke  <pachi@rvburke.com>

	* donwloads.src: fix wrong link to python interpreter

2010-12-24  Rafael Villar Burke  <pachi@rvburke.com>

	* newitems.py downloads.src: Update information about the all-in-one
	installer.
